BaSP-W04-2022: work on header's style for tablets

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -27,7 +27,7 @@
     </figure>
     <form action="" class="header-search">
       <img class="header-search-img" src="../assets/img/search.png" alt="">
-      <input type="search" name="search" />
+      <input type="search" name="search" autocomplete= "off" />
     </form>
   </header>
   <nav>
