--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -27,250 +27,247 @@
     </figure>
     <form action="" class="header-search">
       <img class="header-search-img" src="../assets/img/search.png" alt="">
-      <input type="search" name="search" autocomplete= "off" />
+      <input type="search" name="search" autocomplete="off" />
     </form>
   </header>
-  <nav>
-    <h2 class="nav-menu">Menu</h2>
-    <div class="nav-menu-underline"></div>
-    <ul class="nav-menu-ul">
-      <li>
-        <a href="#"> Home</a>
-      </li>
-      <div></div>
-      <li>
-        <a href="#">SignUp</a>
-      </li>
-      <div></div>
-      <li>
-        <a href="#">Login</a>
-      </li>
-      <div></div>
-    </ul>
-    <ul class="nav-contact-ul">
+  <div class="container">
+    <nav>
+      <h2 class="nav-menu">Menu</h2>
+      <ul class="nav-menu-ul">
+        <li>
+          <a href="#"> Home</a>
+        </li>
+        <li>
+          <a href="#">SignUp</a>
+        </li>
+        <li>
+          <a href="#">Login</a>
+        </li>
+      </ul>
       <h2 class="nav-contact">Contact</h2>
-      <div class="nav-contact-underline"></div>
-      <li>
+      <ul class="nav-contact-ul">
+        <li>
+          <figure>
+            <img src="../assets/img/mail.png" alt="" />
+          </figure>
+          <a href="#" target="_blank">trackgenix@gmail.com</a>
+        </li>
+        <li>
+          <figure>
+            <img src="../assets/img/phone.png" alt="" />
+          </figure>
+          <a href="#" target="_blank">(+54) 4545-9999</a>
+        </li>
+        <li id="nav-contact-address">
+          <figure>
+            <img src="../assets/img/adress.png" alt="" />
+          </figure>
+          <a id="contact-address" href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <section class="first-section">
+        <h1>TRACKGENIX</h1>
+        <h2>Time control that simplifies your business</h2>
+        <p>
+          The time control software to manage your employees' time in the
+          easiest, fastest and most intuitive way.
+        </p>
+        <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
         <figure>
-          <img src="../assets/img/mail.png" alt="" />
+          <img src="../assets/img/Imagen_principal.png" alt="" />
         </figure>
-        <a href="#" target="_blank">trackgenix@gmail.com</a>
-      </li>
-      <li>
-        <figure>
-          <img src="../assets/img/phone.png" alt="" />
-        </figure>
-        <a href="#" target="_blank">(+54) 4545-9999</a>
-      </li>
-      <li id="nav-contact-address">
-        <figure>
-          <img src="../assets/img/adress.png" alt="" />
-        </figure>
-        <a id="contact-address" href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
-      </li>
-    </ul>
-  </nav>
-  <main>
-    <section class="first-section">
-      <h1>TRACKGENIX</h1>
-      <h2>Time control that simplifies your business</h2>
-      <p>
-        The time control software to manage your employees' time in the
-        easiest, fastest and most intuitive way.
-      </p>
-      <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
-      <figure>
-        <img src="../assets/img/Imagen_principal.png" alt="" />
-      </figure>
-    </section>
-    <section class="second-section">
-      <h2>Features</h2>
-      <div class="features-blocks">
-        <div class="features-group">
-          <div class="features-hours">
-            <a href="#">
-              <figure>
-                <img src="../assets/img/clock.png" alt="" />
-              </figure>
-              <p>Hours log</p>
-            </a>
+      </section>
+      <section class="second-section">
+        <h2>Features</h2>
+        <div class="features-blocks">
+          <div class="features-group">
+            <div class="features-hours">
+              <a href="#">
+                <figure>
+                  <img src="../assets/img/clock.png" alt="" />
+                </figure>
+                <p>Hours log</p>
+              </a>
+            </div>
+            <div class="features-reports">
+              <a href="#">
+                <figure>
+                  <img src="../assets/img/Vector.png" alt="" />
+                </figure>
+                <p>Reports</p>
+              </a>
+            </div>
           </div>
-          <div class="features-reports">
-            <a href="#">
-              <figure>
-                <img src="../assets/img/Vector.png" alt="" />
-              </figure>
-              <p>Reports</p>
-            </a>
+          <div class="features-group">
+            <div class="features-resource">
+              <a href="#">
+                <figure>
+                  <img src="../assets/img/search.png" alt="" />
+                </figure>
+                <p>Resource management</p>
+              </a>
+            </div>
+            <div class="features-role">
+              <a href="#">
+                <figure>
+                  <img src="../assets/img/people.png" alt="" />
+                </figure>
+                <p>Multiple role</p>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="features-group">
-          <div class="features-resource">
-            <a href="#">
-              <figure>
-                <img src="../assets/img/search.png" alt="" />
-              </figure>
-              <p>Resource management</p>
-            </a>
-          </div>
-          <div class="features-role">
-            <a href="#">
-              <figure>
-                <img src="../assets/img/people.png" alt="" />
-              </figure>
-              <p>Multiple role</p>
-            </a>
-          </div>
+      </section>
+      <section class="third-section">
+        <h2>Why use Trackgenix?</h2>
+        <div class="why-info">
+          <figure>
+            <img src="../assets/img/why_use.png" alt="" />
+          </figure>
+          <ul>
+            <li><a href="#">Productivity booster</a></li>
+            <li><a href="#">Work traceability</a></li>
+            <li><a href="#">Leadership and team management</a></li>
+            <li><a href="#">Decisionmaking</a></li>
+          </ul>
         </div>
-      </div>
-    </section>
-    <section class="third-section">
-      <h2>Why use Trackgenix?</h2>
-      <div class="why-info">
-        <figure>
-          <img src="../assets/img/why_use.png" alt="" />
-        </figure>
-        <ul>
-          <li><a href="#">Productivity booster</a></li>
-          <li><a href="#">Work traceability</a></li>
-          <li><a href="#">Leadership and team management</a></li>
-          <li><a href="#">Decisionmaking</a></li>
-        </ul>
-      </div>
-    </section>
-    <section class="fourth-section">
-      <h2>Ask for more information:</h2>
-      <div class="info-underline"></div>
-      <form action="#">
-        <input type="text" name="name" placeholder="Name" required />
-        <input type="email" name="email" placeholder="Email" required />
-        <select name="category" required>
-          <option value="0" disabled selected>Category</option>
-          <option value="1">Employee</option>
-          <option value="2">Employee PM</option>
-          <option value="2">Admin</option>
-          <option value="2">SuperAdmin</option>
-          <i></i>
-        </select>
-        <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
-        <div class="buttons">
-          <input type="reset" value="Cancel" />
-          <input type="submit" value="Send" />
+      </section>
+      <section class="fourth-section">
+        <h2>Ask for more information:</h2>
+        <div class="info-underline"></div>
+        <form action="#">
+          <input type="text" name="name" placeholder="Name" required />
+          <input type="email" name="email" placeholder="Email" required />
+          <select name="category" required>
+            <option value="0" disabled selected>Category</option>
+            <option value="1">Employee</option>
+            <option value="2">Employee PM</option>
+            <option value="2">Admin</option>
+            <option value="2">SuperAdmin</option>
+            <i></i>
+          </select>
+          <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
+          <div class="buttons">
+            <input type="reset" value="Cancel" />
+            <input type="submit" value="Send" />
+          </div>
+        </form>
+      </section>
+      <section class="fifth-section">
+        <h2>Our history</h2>
+        <div>
+          <p>
+            Since 2012, we’ve helped countless companies across the globe build
+            applications that empower growth, leave a lasting impression, and
+            transform their user experience.
+          </p>
+          <p>
+            GigaTech was created in 2012 by a
+            trio of colleagues who met through a coding bootcamp. They continue
+            to perfect the craft of app development and make a name for
+            themselves.
+          </p>
+          <p>
+            As the team grew from three to ten, and then from ten to twenty, they explored new partnerships with
+            major technologies to propel their growth. GigaTech currently has around 70 team members and exciting growth
+            goals ahead of them.
+          </p>
         </div>
-      </form>
-    </section>
-    <section class="fifth-section">
-      <h2>Our history</h2>
-      <div>
-        <p>
-          Since 2012, we’ve helped countless companies across the globe build
-          applications that empower growth, leave a lasting impression, and
-          transform their user experience.
-        </p>
-        <p>
-          GigaTech was created in 2012 by a
-          trio of colleagues who met through a coding bootcamp. They continue
-          to perfect the craft of app development and make a name for
-          themselves.
-        </p>
-        <p>
-          As the team grew from three to ten, and then from ten to twenty, they explored new partnerships with
-          major technologies to propel their growth. GigaTech currently has around 70 team members and exciting growth
-          goals ahead of them.
-        </p>
-      </div>
-      <figure class="history-img">
-        <img src="../assets/img/history.png" alt="" />
-      </figure>
-    </section>
-    <section class="sixth-section">
-      <div class="sixth-section-parts product">
-        <h3>PRODUCTS</h3>
-        <ul>
-          <li>
-            <a href="#">Features</a>
-          </li>
-          <li>
-            <a href="#">Downloads</a>
-          </li>
-          <li>
-            <a href="#">integrations</a>
-          </li>
-          <li>
-            <a href="#">Additional features</a>
-          </li>
-        </ul>
-      </div>
-      <div class="sixth-section-parts company">
-        <h3>COMPANY</h3>
-        <ul>
-          <li>
-            <a href="#">About us</a>
-          </li>
-          <li>
-            <a href="#">Trusted by</a>
-          </li>
-          <li>
-            <a href="#">Resources<a>
-          </li>
-          <li>
-            <a href="#">Clients</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h3>SUPPORT</h3>
-        <ul>
-          <li>
-            <a href="#">Help</a>
-          </li>
-          <li>
-            <a href="#">Tutorial</a>
-          </li>
-          <li>
-            <a href="#">API</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <footer>
-      <div class="footer-socials">
-        <figure>
-          <a href="#" target="_blank">
-            <img class="twitter" src="../assets/img/twitter.png" alt="">
-          </a>
+        <figure class="history-img">
+          <img src="../assets/img/history.png" alt="" />
         </figure>
-        <figure>
-          <a href="#" target="_blank">
-            <img class="face" src="../assets/img/face.png" alt="">
-          </a>
-        </figure>
-        <figure>
-          <a href="#" target="_blank">
-            <img class="linkedin" src="../assets/img/linkedin.png" alt="">
-          </a>
-        </figure>
-        <figure>
-          <a href="#" target="_blank">
-            <img class="instagram" src="../assets/img/instagram.png" alt="">
-          </a>
-        </figure>
-        <figure>
-          <a href="#" target="_blank">
-            <img class="github" src="../assets/img/github.png" alt="">
-          </a>
-        </figure>
-      </div>
-      <div class="footer-info">
-        <p>Rosario, Argentina</p>
-        <p>Copyright &#169 2022 GigaTech Software Solutions SA.</p>
-        <P>All rights reserved.</P>
-      </div>
-    </footer>
-  </main>
+      </section>
+      <section class="sixth-section">
+        <div class="sixth-section-parts product">
+          <h3>PRODUCTS</h3>
+          <ul>
+            <li>
+              <a href="#">Features</a>
+            </li>
+            <li>
+              <a href="#">Downloads</a>
+            </li>
+            <li>
+              <a href="#">integrations</a>
+            </li>
+            <li>
+              <a href="#">Additional features</a>
+            </li>
+          </ul>
+        </div>
+        <div class="sixth-section-parts company">
+          <h3>COMPANY</h3>
+          <ul>
+            <li>
+              <a href="#">About us</a>
+            </li>
+            <li>
+              <a href="#">Trusted by</a>
+            </li>
+            <li>
+              <a href="#">Resources<a>
+            </li>
+            <li>
+              <a href="#">Clients</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>SUPPORT</h3>
+          <ul>
+            <li>
+              <a href="#">Help</a>
+            </li>
+            <li>
+              <a href="#">Tutorial</a>
+            </li>
+            <li>
+              <a href="#">API</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <footer>
+        <div class="footer-socials">
+          <figure>
+            <a href="#" target="_blank">
+              <img class="twitter" src="../assets/img/twitter.png" alt="">
+            </a>
+          </figure>
+          <figure>
+            <a href="#" target="_blank">
+              <img class="face" src="../assets/img/face.png" alt="">
+            </a>
+          </figure>
+          <figure>
+            <a href="#" target="_blank">
+              <img class="linkedin" src="../assets/img/linkedin.png" alt="">
+            </a>
+          </figure>
+          <figure>
+            <a href="#" target="_blank">
+              <img class="instagram" src="../assets/img/instagram.png" alt="">
+            </a>
+          </figure>
+          <figure>
+            <a href="#" target="_blank">
+              <img class="github" src="../assets/img/github.png" alt="">
+            </a>
+          </figure>
+        </div>
+        <div class="footer-info">
+          <p>Rosario, Argentina</p>
+          <p>Copyright &#169 2022 GigaTech Software Solutions SA.</p>
+          <P>All rights reserved.</P>
+        </div>
+      </footer>
+    </main>
+  </div>
 </body>
 
 </html>
