BaSP-W04-2022: work on our-history's style for desktop

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -156,27 +156,29 @@
       </section>
       <section class="fifth-section">
         <h2>Our history</h2>
-        <div>
-          <p>
-            Since 2012, we’ve helped countless companies across the globe build
-            applications that empower growth, leave a lasting impression, and
-            transform their user experience.
-          </p>
-          <p>
-            GigaTech was created in 2012 by a
-            trio of colleagues who met through a coding bootcamp. They continue
-            to perfect the craft of app development and make a name for
-            themselves.
-          </p>
-          <p>
-            As the team grew from three to ten, and then from ten to twenty, they explored new partnerships with
-            major technologies to propel their growth. GigaTech currently has around 70 team members and exciting growth
-            goals ahead of them.
-          </p>
+        <div class="fifth-section-group">
+          <div class="paragraph">
+            <p>
+              Since 2012, we’ve helped countless companies across the globe build
+              applications that empower growth, leave a lasting impression, and
+              transform their user experience.
+            </p>
+            <p>
+              GigaTech was created in 2012 by a
+              trio of colleagues who met through a coding bootcamp. They continue
+              to perfect the craft of app development and make a name for
+              themselves.
+            </p>
+            <p>
+              As the team grew from three to ten, and then from ten to twenty, they explored new partnerships with
+              major technologies to propel their growth. GigaTech currently has around 70 team members and exciting growth
+              goals ahead of them.
+            </p>
+          </div>
+          <figure class="history-img">
+            <img src="../assets/img/history.png" alt="" />
+          </figure>
         </div>
-        <figure class="history-img">
-          <img src="../assets/img/history.png" alt="" />
-        </figure>
       </section>
       <section class="sixth-section">
         <div class="sixth-section-parts product">
