--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="../Semana-05/exercises/01_variables_and_operators.js"></script>
+    <script type="text/javascript" src="../Semana-05/exercises/02_strings.js"></script>
     <title>Exercises</title>
 </head>
 <body>
