--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="../Semana-05/exercises/01_variables_and_operators.js"></script>
     <script type="text/javascript" src="../Semana-05/exercises/02_strings.js"></script>
+    <script type="text/javascript" src="../Semana-05/exercises/03_arrays.js"></script>
     <title>Exercises</title>
 </head>
 <body>
-    
+    <h1>Ejercicios JavaScript - Semana 05.</h1>
 </body>
 </html>
