--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../Semana-05/exercises/01_variables_and_operators.js"></script>
     <script type="text/javascript" src="../Semana-05/exercises/02_strings.js"></script>
     <script type="text/javascript" src="../Semana-05/exercises/03_arrays.js"></script>
+    <script type="text/javascript" src="../Semana-05/exercises/04_if_else.js"></script>
     <title>Exercises</title>
 </head>
 <body>
