--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="../Semana-05/exercises/03_arrays.js"></script>
     <script type="text/javascript" src="../Semana-05/exercises/04_if_else.js"></script>
     <script type="text/javascript" src="../Semana-05/exercises/05_for.js"></script>
+    <script type="text/javascript" src="../Semana-05/exercises/06_functions.js"></script>
     <title>Exercises</title>
 </head>
 <body>
