BaSP-W04-2022: fix trackgenix section

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="body.css" type="text/css">
+  <link rel="stylesheet" href="css/body.css" type="text/css">
   <link rel="stylesheet" href="css/header.css" type="text/css">
   <link rel="stylesheet" href="sidebar.css" type="text/css">
-  <link rel="stylesheet" href="trackgenix.css" type="text/css">
+  <link rel="stylesheet" href="css/trackgenix.css" type="text/css">
   <link rel="stylesheet" href="features.css" type="text/css">
   <link rel="stylesheet" href="why-use.css" type="text/css">
   <link rel="stylesheet" href="ask-for.css" type="text/css">
@@ -30,8 +30,8 @@
       <input type="search" name="search" autocomplete="off" />
     </div>
   </header>
-  <!-- <div class="container">
-   <aside>
+  <div class="container">
+  <!--  <aside>
      <h2 class="nav-menu">Menu</h2>
      <ul class="nav-menu-ul">
        <li>
@@ -65,10 +65,10 @@
          <a id="contact-address" href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
        </li>
      </ul>
-   </aside>
+   </aside> -->
     <main>
       <section class="trackgenix">
-        <h1>TRACKGENIX</h1>
+        <h1>trackgenix</h1>
         <h2>Time control that simplifies your business</h2>
         <p>
           The time control software to manage your employees' time in the
@@ -78,7 +78,7 @@
         <figure>
           <img src="../assets/img/Imagen_principal.png" alt="" />
       </section>
-      <section class="features">
+    <!--  <section class="features">
         <h2>Features</h2>
         <div class="features-blocks">
           <div class="features-group">
