BaSP-W04-2022: fix features section

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/header.css" type="text/css">
   <link rel="stylesheet" href="sidebar.css" type="text/css">
   <link rel="stylesheet" href="css/trackgenix.css" type="text/css">
-  <link rel="stylesheet" href="features.css" type="text/css">
+  <link rel="stylesheet" href="css/features.css" type="text/css">
   <link rel="stylesheet" href="why-use.css" type="text/css">
   <link rel="stylesheet" href="ask-for.css" type="text/css">
   <link rel="stylesheet" href="our-history.css" type="text/css">
@@ -31,7 +31,7 @@
     </div>
   </header>
   <div class="container">
-  <!--  <aside>
+    <!--  <aside>
      <h2 class="nav-menu">Menu</h2>
      <ul class="nav-menu-ul">
        <li>
@@ -78,48 +78,44 @@
         <figure>
           <img src="../assets/img/Imagen_principal.png" alt="" />
       </section>
-    <!--  <section class="features">
+      <section class="features">
         <h2>Features</h2>
         <div class="features-blocks">
-          <div class="features-group">
             <div class="features-hours">
+              <figure>
+                <img src="../assets/img/clock.png" alt="" />
+              </figure>
               <a href="#">
-                <figure>
-                  <img src="../assets/img/clock.png" alt="" />
-                </figure>
-                <p>Hours log</p>
+                <h3>Hours log</h3>
               </a>
             </div>
             <div class="features-reports">
+              <figure>
+                <img src="../assets/img/Vector.png" alt="" />
+              </figure>
               <a href="#">
-                <figure>
-                  <img src="../assets/img/Vector.png" alt="" />
-                </figure>
-                <p>Reports</p>
+                <h3>Reports</h3>
               </a>
             </div>
-          </div>
-          <div class="features-group">
             <div class="features-resource">
+              <figure>
+                <img src="../assets/img/search.png" alt="" />
+              </figure>
               <a href="#">
-                <figure>
-                  <img src="../assets/img/search.png" alt="" />
-                </figure>
-                <p>Resource management</p>
+                <h3>Resource management</h3>
               </a>
             </div>
             <div class="features-role">
+              <figure>
+                <img src="../assets/img/people.png" alt="" />
+              </figure>
               <a href="#">
-                <figure>
-                  <img src="../assets/img/people.png" alt="" />
-                </figure>
-                <p>Multiple role</p>
+                <h3>Multiple role</h3>
               </a>
             </div>
-          </div>
         </div>
       </section>
-      <section class="why-use">
+      <!--     <section class="why-use">
         <h2>Why use Trackgenix?</h2>
         <div class="why-info">
           <figure>
