BaSP-W04-2020: fix why-use section

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="sidebar.css" type="text/css">
   <link rel="stylesheet" href="css/trackgenix.css" type="text/css">
   <link rel="stylesheet" href="css/features.css" type="text/css">
-  <link rel="stylesheet" href="why-use.css" type="text/css">
+  <link rel="stylesheet" href="css/why-use.css" type="text/css">
   <link rel="stylesheet" href="ask-for.css" type="text/css">
   <link rel="stylesheet" href="our-history.css" type="text/css">
   <link rel="stylesheet" href="products.css" type="text/css">
@@ -81,45 +81,45 @@
       <section class="features">
         <h2>Features</h2>
         <div class="features-blocks">
-            <div class="features-hours">
-              <figure>
-                <img src="../assets/img/clock.png" alt="" />
-              </figure>
-              <a href="#">
-                <h3>Hours log</h3>
-              </a>
-            </div>
-            <div class="features-reports">
-              <figure>
-                <img src="../assets/img/Vector.png" alt="" />
-              </figure>
-              <a href="#">
-                <h3>Reports</h3>
-              </a>
-            </div>
-            <div class="features-resource">
-              <figure>
-                <img src="../assets/img/search.png" alt="" />
-              </figure>
-              <a href="#">
-                <h3>Resource management</h3>
-              </a>
-            </div>
-            <div class="features-role">
-              <figure>
-                <img src="../assets/img/people.png" alt="" />
-              </figure>
-              <a href="#">
-                <h3>Multiple role</h3>
-              </a>
-            </div>
+          <div class="features-hours">
+            <figure>
+              <img src="../assets/img/clock.png" alt="" />
+            </figure>
+            <a href="#">
+              <h3>Hours log</h3>
+            </a>
+          </div>
+          <div class="features-reports">
+            <figure>
+              <img src="../assets/img/Vector.png" alt="" />
+            </figure>
+            <a href="#">
+              <h3>Reports</h3>
+            </a>
+          </div>
+          <div class="features-resource">
+            <figure>
+              <img src="../assets/img/search.png" alt="" />
+            </figure>
+            <a href="#">
+              <h3>Resource management</h3>
+            </a>
+          </div>
+          <div class="features-role">
+            <figure>
+              <img src="../assets/img/people.png" alt="" />
+            </figure>
+            <a href="#">
+              <h3>Multiple role</h3>
+            </a>
+          </div>
         </div>
       </section>
-      <!--     <section class="why-use">
+      <section class="why-use">
         <h2>Why use Trackgenix?</h2>
         <div class="why-info">
           <figure>
-            <img src="../assets/img/why_use.png" alt="" />
+            <img src="../assets/img/why_use.png" alt="why use image" />
           </figure>
           <ul>
             <li><a href="#">Productivity booster</a></li>
@@ -129,7 +129,7 @@
           </ul>
         </div>
       </section>
-      <section class="ask-for">
+      <!--   <section class="ask-for">
         <h2>Ask for more information:</h2>
         <div class="info-underline"></div>
         <form action="#">
