BaSP-W04-2020: fix ask-for section

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/trackgenix.css" type="text/css">
   <link rel="stylesheet" href="css/features.css" type="text/css">
   <link rel="stylesheet" href="css/why-use.css" type="text/css">
-  <link rel="stylesheet" href="ask-for.css" type="text/css">
+  <link rel="stylesheet" href="css/ask-for.css" type="text/css">
   <link rel="stylesheet" href="our-history.css" type="text/css">
   <link rel="stylesheet" href="products.css" type="text/css">
   <link rel="stylesheet" href="footer.css" type="text/css">
@@ -129,9 +129,8 @@
           </ul>
         </div>
       </section>
-      <!--   <section class="ask-for">
+      <section class="ask-for">
         <h2>Ask for more information:</h2>
-        <div class="info-underline"></div>
         <form action="#">
           <input type="text" name="name" placeholder="Name" required />
           <input type="email" name="email" placeholder="Email" required />
@@ -139,8 +138,8 @@
             <option value="0" disabled selected>Category</option>
             <option value="1">Employee</option>
             <option value="2">Employee PM</option>
-            <option value="2">Admin</option>
-            <option value="2">SuperAdmin</option>
+            <option value="3">Admin</option>
+            <option value="4">SuperAdmin</option>
             <i></i>
           </select>
           <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
@@ -150,7 +149,7 @@
           </div>
         </form>
       </section>
-      <section class="our-history">
+      <!--       <section class="our-history">
         <h2>Our history</h2>
         <div class="our-history-group">
           <div class="paragraph">
