BaSP-W04-2020: fix our-history section

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/features.css" type="text/css">
   <link rel="stylesheet" href="css/why-use.css" type="text/css">
   <link rel="stylesheet" href="css/ask-for.css" type="text/css">
-  <link rel="stylesheet" href="our-history.css" type="text/css">
+  <link rel="stylesheet" href="css/our-history.css" type="text/css">
   <link rel="stylesheet" href="products.css" type="text/css">
   <link rel="stylesheet" href="footer.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -149,7 +149,7 @@
           </div>
         </form>
       </section>
-      <!--       <section class="our-history">
+       <section class="our-history">
         <h2>Our history</h2>
         <div class="our-history-group">
           <div class="paragraph">
@@ -176,7 +176,7 @@
           </figure>
         </div>
       </section>
-      <section class="products">
+        <!--    <section class="products">
         <div class="products-parts product">
           <h3>PRODUCTS</h3>
           <ul>
