--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/why-use.css" type="text/css">
   <link rel="stylesheet" href="css/ask-for.css" type="text/css">
   <link rel="stylesheet" href="css/our-history.css" type="text/css">
-  <link rel="stylesheet" href="products.css" type="text/css">
+  <link rel="stylesheet" href="css/products.css" type="text/css">
   <link rel="stylesheet" href="footer.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
@@ -176,7 +176,7 @@
           </figure>
         </div>
       </section>
-        <!--    <section class="products">
+    <section class="products">
         <div class="products-parts product">
           <h3>PRODUCTS</h3>
           <ul>
@@ -229,7 +229,7 @@
           </ul>
         </div>
       </section>
-      <footer>
+              <!--  <footer>
         <div class="footer-socials">
           <figure>
             <a href="#" target="_blank">
